# wikigrams

./: .env  Makefile  README.md  getting-started.ipynb  metadata.ducklake  pyproject.toml
adapter/: prepare.py  submit.py
adapter/src/: submit.py
extract/: import.sh
extract/src/: import.py
maintenance/: checkpoint.sh
partitions/: diagnose_weekly.sh  merge_weekly_files.sh  monthly.sh  monthly_incremental.sh  weekly.sh  weekly_fixed.sh  weekly_incremental.sh
test/: cleanup_test.sh  import_test.sh  weekly_test.sh
