[project]
name = "wikigrams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "ipykernel>=7.1.0",
    "jupysql>=0.11.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "toml>=0.10.2",
    "vl-convert-python>=1.8.0",
]
